--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ plugins {
 }
 
 android {
+    lintOptions {
+        checkReleaseBuilds false
+    }
     namespace 'com.example.projectvictorys'
     compileSdk 33
 
